--- a/app/src/main/res/layout/activity_bookmark.xml
+++ b/app/src/main/res/layout/activity_bookmark.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".BookmarkActivity">
 
+    <!-- 하단 네비게이션 바 -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/bookmark_toolbar"
         android:layout_width="match_parent"
@@ -22,20 +23,91 @@
             android:layout_gravity="center"
             android:text="북마크"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_bookmark"
+    <HorizontalScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/bookmark_toolbar"
+        android:layout_marginTop="1dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/entire_button"
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="7dp"
+                android:background="@drawable/edit_profile_rounded"
+                android:text="전체"
+                android:textColor="#00BCD4"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/tuna_button"
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="7dp"
+                android:background="@drawable/edit_profile_rounded"
+                android:text="참치통조림"
+                android:textColor="#00BCD4"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/egg_button"
+                android:layout_width="90dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="7dp"
+                android:background="@drawable/edit_profile_rounded"
+                android:text="계란"
+                android:textColor="#00BCD4"
+                android:textSize="15sp" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/bookmark_toolbar"
         android:layout_above="@id/bookmark_bottom_navi_menu"
-        />
+        android:layout_below="@id/scroll">
+        <!--        app:layout_constraintTop_toBottomOf="@+id/button">-->
 
-    <!-- 하단 네비게이션 바 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginLeft="9dp"
+                android:background="@null"
+                android:layout_gravity="start"
+                android:text="총 3개의 레시피"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_bookmark"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+    </ScrollView>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bookmark_bottom_navi_menu"
         android:layout_width="match_parent"
