--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -242,17 +242,32 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/address1_textview"
-                    android:layout_width="wrap_content"
+                    android:layout_width="260dp"
+                    android:layout_marginRight="10dp"
                     android:layout_height="45dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_weight="2"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/profile_rounded"
-                    android:textSize="20sp"
+                    android:inputType="text"
+                    android:textColor="#000000"/>
+
+                <Button
+                    android:id="@+id/address_search_Button"
+                    android:layout_width="100dp"
+                    android:layout_height="45dp"
+                    android:layout_gravity="center"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/button_radius_little_whole"
+                    android:text="주소 검색"
+                    android:textColor="#FFFFFF"
+                    android:textSize="15dp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -295,7 +310,6 @@
         android:id="@+id/profile_bottom_navi_menu"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-
         android:layout_alignParentBottom="true"
         android:background="#6E6E6E"
         app:itemIconTint="#FFFFFF"
