--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -25,14 +25,6 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="55dp"
-            android:layout_height="30dp"
-            android:layout_gravity="end"
-            android:text="완료"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
@@ -209,24 +201,30 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="48dp">
 
-                <RadioButton
-                    android:id="@+id/radio_man"
-                    android:layout_width="wrap_content"
+                <RadioGroup
+                    android:id="@+id/genderGroup"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:layout_weight="1"
-                    android:text="남성"
-                    android:textSize="20sp" />
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/radio_woman"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="여성"
-                    android:textSize="20sp" />
+                    <RadioButton
+                        android:id="@+id/genderMan"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:checked="true"
+                        android:text="남자" />
+
+                    <RadioButton
+                        android:id="@+id/genderWoman"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="여자" />
+                </RadioGroup>
             </LinearLayout>
 
             <LinearLayout
@@ -246,17 +244,32 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/address1_textview"
-                    android:layout_width="wrap_content"
+                    android:layout_width="260dp"
+                    android:layout_marginRight="10dp"
                     android:layout_height="45dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_weight="2"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/edit_profile_rounded"
-                    android:textSize="20sp"
+                    android:inputType="text"
+                    android:textColor="#000000"/>
+
+                <Button
+                    android:id="@+id/address_search_Button"
+                    android:layout_width="100dp"
+                    android:layout_height="45dp"
+                    android:layout_gravity="center"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/button_radius_little_whole"
+                    android:text="주소 검색"
+                    android:textColor="#FFFFFF"
+                    android:textSize="15dp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -286,6 +299,8 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="15dp"
                     android:layout_weight="2"
+                    android:hint="상세 주소"
+                    android:textColor="#000000"
                     android:background="@drawable/edit_profile_rounded"
                     android:textSize="20sp"
                     android:textStyle="bold" />
