--- a/app/src/main/res/layout/recipe_item_list.xml
+++ b/app/src/main/res/layout/recipe_item_list.xml
@@ -73,7 +73,8 @@
     <LinearLayout
         android:layout_width="394dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/click">
 
         <ImageView
             android:id="@+id/recipe_imageview"
@@ -134,9 +135,6 @@
             android:src="@drawable/bookmark" />
 
     </LinearLayout>
-
-
-
 
     <TextView
         android:id="@+id/basket_underline"
