--- a/app/src/main/res/menu/completion_item.xml
+++ b/app/src/main/res/menu/completion_item.xml
@@ -6,7 +6,7 @@
     <!--        android:icon="@drawable/arrow"-->
     <!--        android:title="menu_back"-->
     <!--        app:showAsAction="always"/>-->
-    <item android:id="@+id/menu_edit"
-        android:title="수정"
+    <item android:id="@+id/menu_completion"
+        android:title="완료"
         app:showAsAction="always"/>
 </menu>
