--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".ItemActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
 
     <LinearLayout
         android:layout_width="368dp"
-        android:layout_height="663dp"
+        android:layout_height="755dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -68,7 +68,7 @@
         <DatePicker
             android:id="@+id/itemDate"
             android:layout_width="match_parent"
-            android:layout_height="177dp"
+            android:layout_height="169dp"
             android:calendarViewShown="false"
             android:datePickerMode="spinner" />
 
@@ -97,20 +97,21 @@
             android:textSize="20sp" />
 
         <RadioGroup
-            android:layout_width="345dp"
-            android:layout_height="237dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <RadioGroup
                 android:id="@+id/genderGroup"
-                android:layout_width="280dp"
-                android:layout_height="23dp"
+                android:layout_width="364dp"
+                android:layout_height="11dp"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal" />
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="360dp"
-                android:layout_height="198dp"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_gravity="center"
                 tools:srcCompat="@drawable/no_image" />
         </RadioGroup>
 
